0.9.1
  * Support for genvalidity >=1.0.0.0

0.9.0
  * Fix inconsistencies on different platforms: [#166](https://github.com/commercialhaskell/path/issues/166)
  * `replaceProperPrefix`
  * Make it possible to use windows paths on posix and vice versa

0.8.0
  * Rerelease of 0.7.1 with better version number

0.7.1:
	* Test with GHC 8.8.2, 8.8.3, 8.10.1.
	* Export SomeBase constructor.
	* Fix Lift severe Lift instance bug

0.7.0:
	* BREAKING CHANGE: "fileExtension" now throws an exception if the file has no
		extension. You can use the result as a "Maybe" in pure
		code or handle the exception appropriately in any other monad.
	* Old extension operations "addFileExtension" and "setFileExtension" have
		been deprecated and replaced by "addExtension" and "replaceExtension"
		respectively with new behavior.
		ADAPTING YOUR CODE TO THIS CHANGE:
		* Code that sets an extension not starting with a "." e.g.  "foo", must
		  be changed such that it starts with a "." i.e. ".foo".
		* Code that sets multiple extensions in one go e.g. ".tar.gz" must be
		  changed to set them one at a time instead i.e. add ".tar" first and
		  then add ".gz".
		* Code that sets an extension starting with multiple dots e.g.
		  "..foo" must be changed such as to make the extra dots part of the
		  file name instead.
		Details:
		The new operations "addExtension" and "replaceExtension" accept only "valid"
		extension forms which is exactly the same as what "fileExtension" returns.
		A valid extension starts with a @.@ followed by one or more characters
		not including @.@ followed by zero or more @.@s in trailing position.
		This change allows extension operations to be principled following
		these laws:
		* flip addExtension file >=> fileExtension == return
		* (fileExtension >=> flip replaceExtension file) file == return file
	* Add splitExtension operation such that:
		* uncurry addExtension . swap >=> splitExtension == return
		* splitExtension >=> uncurry addExtension . swap == return