@@ -1,5 +1,6 @@
 0.9.1
   * Support for genvalidity >=1.0.0.0
+  * `mapSomeBase` and `prjSomeBase` for modifying or projecting SomeBase.
 
 0.9.0
   * Fix inconsistencies on different platforms: [#166](https://github.com/commercialhaskell/path/issues/166)
